# weld-ml

./: .gitattributes  pyproject.toml  test.py
paper/: Weld Result NR 2026-02-09.docx  Weld Result NR 2026-02-19.docx  Weld Result NR 2026-02-24.docx  Weld Result NR 2026-02-26.docx  Weld Result NR 2026-03-03.docx  Weld Result NR 2026-03-07.docx  figure_list.md  ~$ld Result NR 2026-02-19.docx
run1/P01_data/: S01_af_features.ipynb  S02_data_exp.ipynb  S02_data_exp.xlsx  S03_af_feature_relevances.ipynb  S03_af_feature_relevances.xlsx
run1/P05_EA/: S01_trend.ipynb
run1/P06_ML_Plot/: S01.ipynb
run1/P07_naive_analysis/: S01.ipynb  S01_prototype.ipynb  S02_all.ipynb
run1/Q01_agg/: feature_ranks_pivot.xlsx  feature_ranks_pivot_no_af.xlsx  main.ipynb  main_no_af.ipynb
run1/data/: S01_af_features.ipynb  S01_af_features_Fy.xlsx  S01_af_features_Fz.xlsx  S01_af_features_Mz.xlsx  S02_data_exp.ipynb  S02_data_exp.xlsx  S03_af_feature_relevances.ipynb  S04_loc_values.ipynb  main.ipynb
run1/lib/: classes_ml.py  directory.py  optuna_ml.py  shap.py  utils.py
src/: S00_utils.py  S01_toy_data_gen.ipynb  S01_toy_data_gen.py  S02_wavelet.ipynb  S11_ml.ipynb  S11_toy_data_gen.ipynb  S12_feature_importance.ipynb  S13_gridsearch.ipynb  S24_ann.ipynb  S31_ml.ipynb  S32_feature_importance.ipynb  S33_gridsearch.ipynb  S34_ann.ipynb  S35_conv.ipynb  S35_mlp_cnn.ipynb  S36_lstm.ipynb  S36_mlp_lstm.ipynb  S37_mlp_cnn_lstm.ipynb  S38_mlp_cnn_lstm_attention.ipynb  main.py
src/P03_data_preprocess/: S01.ipynb  S01_residual_stress_wide_format.ipynb  S01_residual_stress_wide_format.xlsx  S03_af_feature_relevance.ipynb  S03_af_feature_relevance.xlsx  S04_af_feature_selection.ipynb  S04_af_feature_selection.xlsx  S05_af_feature_extraction.ipynb  S05_af_features_extraction.xlsx  S06_af_data_combined copy.ipynb  S06_af_data_combined.ipynb  S06_data.xlsx  S06_data_combined.xlsx  S07_af_data_loc_features.ipynb  S07_data_combined_loc.ipynb  S07_data_combined_loc.xlsx  S08_data_combined_single_y.ipynb  S08_data_combined_single_y.xlsx
src/P03_data_preprocess_non_diff_sigma/: S01_residual_stress_wide_format.xlsx  S04_af_feature_selection.ipynb  S05_af_features_extraction.xlsx  S08_data_combined_single_y.xlsx
src/T01_prototype/: S00_utils.py  S21_ts_features.ipynb  S22_wavelet.ipynb  S41_mlp_vsn.ipynb  S42_mlp_attn.ipynb
src/T02_fusion_transformer/: tft_model.py  trainer.ipynb
src/T03/: mlp_attn.ipynb  models.py  note.md
src/T04/: process.ipynb
src/data/: test_no_23.csv
src/output/: S11__2025-04-21-052441.pickle  data_train.xlsx  (+2 more)
(+690 files in other folders)
