[project]
name = "weld-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
    "marimo>=0.12.10",
    "matplotlib>=3.10.1",
    "notebook>=7.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "ruff>=0.11.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tsfresh>=0.21.0",
]
