[project]
name = "weld-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
    "lightning>=2.5.1.post0",
    "marimo>=0.12.10",
    "matplotlib>=3.10.1",
    "notebook>=7.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pytorch-forecasting>=1.3.0",
    "pytorch-optimizer>=3.5.0",
    "pywavelets>=1.8.0",
    "ruff>=0.11.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.21.0",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
    "tsfresh>=0.21.0",
    "xgboost>=3.1.2",
]
