[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicitly list package directories
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["run1*", "src*"]
namespaces = false

[project]
name = "weld-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmaes>=0.12.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.0",
    "lightning>=2.5.1.post0",
    "marimo>=0.12.10",
    "matplotlib>=3.10.1",
    "notebook>=7.4.0",
    "openpyxl>=3.1.5",
    "optuna>=4.6.0",
    "optuna-dashboard>=0.20.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pytorch-forecasting>=1.3.0",
    "pytorch-optimizer>=3.5.0",
    "pywavelets>=1.8.0",
    "ruff>=0.11.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tabpfn>=6.3.1",
    "tabpfn-extensions[all]",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.21.0",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
    "tsfresh>=0.21.0",
    "xgboost>=3.1.2",
]

[tool.uv.sources]
tabpfn-extensions = { git = "https://github.com/PriorLabs/tabpfn-extensions.git" }
